# streaming-chat

./: .pre-commit-config.yaml  LICENSE  README.md  bandit.yaml  docker-compose.yaml  pyproject.toml
src/: .dockerignore  Dockerfile  app.py  gunicorn.conf.py  requirements.txt
src/ai/: streaming_io.py
src/api/: __init__.py  chat.py  globals.py
src/config/: __init__.py  helper_functions.py
streaming_chat/: __init__.py
streaming_chat/ai/: __init__.py  streaming_io.py
streaming_chat/config/: __init__.py  helper_functions.py
