[tool.poetry]
name = "streaming-chat"
version = "0.1.0"
description = ""
authors = ["Ben Hoyle <benjhoyle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.25.0"
tiktoken = "^0.6.0"


[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.2"
wily = "^1.25.0"
bandit = "^1.7.8"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff formatting settings
[tool.ruff]
lint.ignore-init-module-imports = true
lint.select = ["ALL"]
line-length = 120

#select = [
#    "E",  # pycodestyle
#    "F",  # pyflakes
#]