[tool.poetry]
name = "streaming-chat"
version = "0.1.0"
description = ""
authors = ["Ben Hoyle <benjhoyle@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.25.0"
tiktoken = "^0.6.0"


[tool.poetry.dev-dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.6"
pytest-cov = "^5.0.0"
pytest-mock = "^3.14.0"
ruff = "^0.4.2"
wily = "^1.25.0"
bandit = "^1.7.8"
pre-commit = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Ruff formatting settings
[tool.ruff]
lint.ignore-init-module-imports = true
lint.select = ["ALL"]
lint.ignore = [
    "D204", # 1 blank line required after class docstring
    "D203", # Space before class docstring
    "D211", # No blank lines allowed before class docstring
    "D212", # Multi-line docstring summary should start at the second line
    "D213",
    "COM812", # Missing trailing comma in Python 3.6+
    "ISC001",
    "RET505",  # Returns before else
    "T201", # Sometimes need some prints
    "INP001", # Implicit namespace packages are discouraged - src is copied to docker
]
line-length = 120

#select = [
#    "E",  # pycodestyle
#    "F",  # pyflakes
#]